// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker@touch-phone Should render empty component 1`] = `
<Component>
  <Component>
    <DatepickerPresenter>
      <Component
        baseline={true}
        className="Datepicker"
        iconRight={
          <Unknown
            type="calendar"
          />
        }
        onBlur={[Function]}
        onChange={[Function]}
        type="date"
      >
        <Component
          className="Textinput Textinput_baseline Datepicker"
          iconRight={
            <Unknown
              type="calendar"
            />
          }
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
        >
          <DebounceInput
            className="Textinput Textinput_baseline Datepicker"
            debounceTimeout={0}
            element={[Function]}
            forceNotifyByEnter={true}
            forceNotifyOnBlur={true}
            iconRight={
              <Unknown
                type="calendar"
              />
            }
            minLength={0}
            onBlur={[Function]}
            onChange={[Function]}
            type="date"
          >
            <Component
              className="Textinput Textinput_baseline Datepicker"
              iconRight={
                <Unknown
                  type="calendar"
                />
              }
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="date"
              value=""
            >
              <Component
                className="Textinput Textinput_baseline Datepicker"
                iconRight={
                  <Unknown
                    type="calendar"
                  />
                }
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                type="date"
                value=""
              >
                <Component
                  className="Textinput Textinput_baseline Datepicker"
                  iconRight={
                    <Unknown
                      type="calendar"
                    />
                  }
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  type="date"
                  value=""
                >
                  <Component
                    className="Textinput Textinput_baseline Datepicker"
                    iconRight={
                      <Unknown
                        type="calendar"
                      />
                    }
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value=""
                  >
                    <Component
                      className="Textinput Textinput_baseline Datepicker"
                      iconRight={
                        <Unknown
                          type="calendar"
                        />
                      }
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyDown={[Function]}
                      type="date"
                      value=""
                    >
                      <Component
                        className="Textinput Textinput_baseline Datepicker"
                        iconRight={
                          <Unknown
                            type="calendar"
                          />
                        }
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        type="date"
                        value=""
                      >
                        <Component
                          className="Textinput Textinput_baseline Datepicker"
                          iconRight={
                            <Unknown
                              type="calendar"
                            />
                          }
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          type="date"
                          value=""
                        >
                          <Component
                            className="Textinput Textinput_baseline Datepicker"
                            iconRight={
                              <Unknown
                                type="calendar"
                              />
                            }
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            type="date"
                            value=""
                          >
                            <Component
                              className="Textinput Textinput_baseline Datepicker"
                              iconRight={
                                <Unknown
                                  type="calendar"
                                />
                              }
                              onBlur={[Function]}
                              onChange={[Function]}
                              onKeyDown={[Function]}
                              type="date"
                              value=""
                            >
                              <withAutoFocus(WithControl(Textinput))
                                className="Textinput Textinput_baseline Datepicker"
                                iconRight={
                                  <Unknown
                                    type="calendar"
                                  />
                                }
                                onBlur={[Function]}
                                onChange={[Function]}
                                onKeyDown={[Function]}
                                type="date"
                                value=""
                              >
                                <WithControl(Textinput)
                                  className="Textinput Textinput_baseline Datepicker"
                                  controlRef={[Function]}
                                  iconRight={
                                    <Unknown
                                      type="calendar"
                                    />
                                  }
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onKeyDown={[Function]}
                                  type="date"
                                  value=""
                                >
                                  <Textinput
                                    className="Textinput Textinput_baseline Datepicker"
                                    controlRef={[Function]}
                                    iconRight={
                                      <Unknown
                                        type="calendar"
                                      />
                                    }
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    onMouseDown={[Function]}
                                    onMouseUp={[Function]}
                                    type="date"
                                    value=""
                                  >
                                    <span
                                      className="Textinput Textinput_iconRight Textinput_baseline Datepicker"
                                    >
                                      <TextinputIcon
                                        component={
                                          <Unknown
                                            type="calendar"
                                          />
                                        }
                                        side="right"
                                      >
                                        <Component
                                          className="Textinput-Icon Textinput-Icon_side_right"
                                          type="calendar"
                                        >
                                          <Component
                                            className="Icon Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                            type="calendar"
                                          >
                                            <Icon
                                              className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                              type="calendar"
                                            >
                                              <span
                                                aria-hidden={true}
                                                className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                style={Object {}}
                                              />
                                            </Icon>
                                          </Component>
                                        </Component>
                                      </TextinputIcon>
                                      <RenderOverride
                                        aria-invalid={false}
                                        controlRef={[Function]}
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        onMouseDown={[Function]}
                                        onMouseUp={[Function]}
                                        type="date"
                                        value=""
                                      >
                                        <TextinputControl
                                          aria-invalid={false}
                                          controlRef={[Function]}
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          onKeyDown={[Function]}
                                          onMouseDown={[Function]}
                                          onMouseUp={[Function]}
                                          type="date"
                                          value=""
                                        >
                                          <input
                                            aria-invalid={false}
                                            autoComplete="off"
                                            className="Textinput-Control"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            onMouseDown={[Function]}
                                            onMouseUp={[Function]}
                                            type="date"
                                            value=""
                                          />
                                        </TextinputControl>
                                      </RenderOverride>
                                      <TextinputBox>
                                        <span
                                          className="Textinput-Box"
                                        />
                                      </TextinputBox>
                                    </span>
                                  </Textinput>
                                </WithControl(Textinput)>
                              </withAutoFocus(WithControl(Textinput))>
                            </Component>
                          </Component>
                        </Component>
                      </Component>
                    </Component>
                  </Component>
                </Component>
              </Component>
            </Component>
          </DebounceInput>
        </Component>
      </Component>
    </DatepickerPresenter>
  </Component>
</Component>
`;

exports[`Datepicker@touch-phone Should support Textinput / Input props 1`] = `
<Component
  disabled={true}
  max={2015-02-18T00:00:00.000Z}
  min={2015-02-15T00:00:00.000Z}
  name="datefield"
  pin="brick-brick"
  readOnly={true}
  size="m"
  value={2015-02-17T00:00:00.000Z}
  view="default"
>
  <Component
    disabled={true}
    max={2015-02-18T00:00:00.000Z}
    min={2015-02-15T00:00:00.000Z}
    name="datefield"
    pin="brick-brick"
    readOnly={true}
    size="m"
    value={2015-02-17T00:00:00.000Z}
    view="default"
  >
    <DatepickerPresenter
      disabled={true}
      max={2015-02-18T00:00:00.000Z}
      min={2015-02-15T00:00:00.000Z}
      name="datefield"
      pin="brick-brick"
      readOnly={true}
      size="m"
      value={2015-02-17T00:00:00.000Z}
      view="default"
    >
      <Component
        baseline={true}
        className="Datepicker Datepicker_view_default"
        disabled={true}
        iconRight={
          <Unknown
            type="calendar"
          />
        }
        max="2015-02-18"
        min="2015-02-15"
        name="datefield"
        onBlur={[Function]}
        onChange={[Function]}
        pin="brick-brick"
        readOnly={true}
        size="m"
        type="date"
        value="2015-02-17"
        view="default"
      >
        <Component
          className="Textinput Textinput_baseline Datepicker Datepicker_view_default"
          disabled={true}
          iconRight={
            <Unknown
              type="calendar"
            />
          }
          max="2015-02-18"
          min="2015-02-15"
          name="datefield"
          onBlur={[Function]}
          onChange={[Function]}
          pin="brick-brick"
          readOnly={true}
          size="m"
          type="date"
          value="2015-02-17"
          view="default"
        >
          <DebounceInput
            className="Textinput Textinput_baseline Datepicker Datepicker_view_default"
            debounceTimeout={0}
            disabled={true}
            element={[Function]}
            forceNotifyByEnter={true}
            forceNotifyOnBlur={true}
            iconRight={
              <Unknown
                type="calendar"
              />
            }
            max="2015-02-18"
            min="2015-02-15"
            minLength={0}
            name="datefield"
            onBlur={[Function]}
            onChange={[Function]}
            pin="brick-brick"
            readOnly={true}
            size="m"
            type="date"
            value="2015-02-17"
            view="default"
          >
            <Component
              className="Textinput Textinput_baseline Datepicker Datepicker_view_default"
              disabled={true}
              iconRight={
                <Unknown
                  type="calendar"
                />
              }
              max="2015-02-18"
              min="2015-02-15"
              name="datefield"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              pin="brick-brick"
              readOnly={true}
              size="m"
              type="date"
              value="2015-02-17"
              view="default"
            >
              <Component
                className="Textinput Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                disabled={true}
                iconRight={
                  <Unknown
                    type="calendar"
                  />
                }
                max="2015-02-18"
                min="2015-02-15"
                name="datefield"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                pin="brick-brick"
                readOnly={true}
                size="m"
                type="date"
                value="2015-02-17"
                view="default"
              >
                <Component
                  className="Textinput Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                  disabled={true}
                  iconRight={
                    <Unknown
                      type="calendar"
                    />
                  }
                  max="2015-02-18"
                  min="2015-02-15"
                  name="datefield"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  pin="brick-brick"
                  readOnly={true}
                  size="m"
                  type="date"
                  value="2015-02-17"
                  view="default"
                >
                  <Component
                    className="Textinput Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                    disabled={true}
                    iconRight={
                      <Unknown
                        type="calendar"
                      />
                    }
                    max="2015-02-18"
                    min="2015-02-15"
                    name="datefield"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    pin="brick-brick"
                    readOnly={true}
                    size="m"
                    type="date"
                    value="2015-02-17"
                    view="default"
                  >
                    <Component
                      className="Textinput Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                      disabled={true}
                      iconRight={
                        <Unknown
                          type="calendar"
                        />
                      }
                      max="2015-02-18"
                      min="2015-02-15"
                      name="datefield"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyDown={[Function]}
                      pin="brick-brick"
                      readOnly={true}
                      size="m"
                      type="date"
                      value="2015-02-17"
                      view="default"
                    >
                      <Component
                        className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                        disabled={true}
                        iconRight={
                          <Unknown
                            type="calendar"
                          />
                        }
                        max="2015-02-18"
                        min="2015-02-15"
                        name="datefield"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyDown={[Function]}
                        pin="brick-brick"
                        readOnly={true}
                        size="m"
                        type="date"
                        value="2015-02-17"
                        view="default"
                      >
                        <Component
                          className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                          disabled={true}
                          iconRight={
                            <Unknown
                              type="calendar"
                            />
                          }
                          max="2015-02-18"
                          min="2015-02-15"
                          name="datefield"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          pin="brick-brick"
                          readOnly={true}
                          size="m"
                          type="date"
                          value="2015-02-17"
                          view="default"
                        >
                          <Component
                            className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                            disabled={true}
                            iconRight={
                              <Unknown
                                type="calendar"
                              />
                            }
                            max="2015-02-18"
                            min="2015-02-15"
                            name="datefield"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            pin="brick-brick"
                            readOnly={true}
                            size="m"
                            type="date"
                            value="2015-02-17"
                            view="default"
                          >
                            <Component
                              className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                              disabled={true}
                              iconRight={
                                <Unknown
                                  type="calendar"
                                />
                              }
                              max="2015-02-18"
                              min="2015-02-15"
                              name="datefield"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onKeyDown={[Function]}
                              pin="brick-brick"
                              readOnly={true}
                              size="m"
                              type="date"
                              value="2015-02-17"
                              view="default"
                            >
                              <withAutoFocus(WithControl(Textinput))
                                className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                                disabled={true}
                                iconRight={
                                  <Unknown
                                    type="calendar"
                                  />
                                }
                                max="2015-02-18"
                                min="2015-02-15"
                                name="datefield"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onKeyDown={[Function]}
                                pin="brick-brick"
                                readOnly={true}
                                size="m"
                                type="date"
                                value="2015-02-17"
                                view="default"
                              >
                                <WithControl(Textinput)
                                  className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                                  controlRef={[Function]}
                                  disabled={true}
                                  iconRight={
                                    <Unknown
                                      type="calendar"
                                    />
                                  }
                                  max="2015-02-18"
                                  min="2015-02-15"
                                  name="datefield"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onKeyDown={[Function]}
                                  pin="brick-brick"
                                  readOnly={true}
                                  size="m"
                                  type="date"
                                  value="2015-02-17"
                                  view="default"
                                >
                                  <Textinput
                                    className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                                    controlRef={[Function]}
                                    disabled={true}
                                    iconRight={
                                      <Unknown
                                        type="calendar"
                                      />
                                    }
                                    max="2015-02-18"
                                    min="2015-02-15"
                                    name="datefield"
                                    onChange={[Function]}
                                    onKeyDown={[Function]}
                                    pin="brick-brick"
                                    readOnly={true}
                                    size="m"
                                    type="date"
                                    value="2015-02-17"
                                    view="default"
                                  >
                                    <span
                                      className="Textinput Textinput_disabled Textinput_iconRight Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline Datepicker Datepicker_view_default"
                                    >
                                      <TextinputIcon
                                        component={
                                          <Unknown
                                            type="calendar"
                                          />
                                        }
                                        side="right"
                                      >
                                        <Component
                                          className="Textinput-Icon Textinput-Icon_side_right"
                                          type="calendar"
                                        >
                                          <Component
                                            className="Icon Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                            type="calendar"
                                          >
                                            <Icon
                                              className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                              type="calendar"
                                            >
                                              <span
                                                aria-hidden={true}
                                                className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                style={Object {}}
                                              />
                                            </Icon>
                                          </Component>
                                        </Component>
                                      </TextinputIcon>
                                      <RenderOverride
                                        aria-invalid={false}
                                        controlRef={[Function]}
                                        disabled={true}
                                        max="2015-02-18"
                                        min="2015-02-15"
                                        name="datefield"
                                        onChange={[Function]}
                                        onKeyDown={[Function]}
                                        readOnly={true}
                                        type="date"
                                        value="2015-02-17"
                                      >
                                        <TextinputControl
                                          aria-invalid={false}
                                          controlRef={[Function]}
                                          disabled={true}
                                          max="2015-02-18"
                                          min="2015-02-15"
                                          name="datefield"
                                          onChange={[Function]}
                                          onKeyDown={[Function]}
                                          readOnly={true}
                                          type="date"
                                          value="2015-02-17"
                                        >
                                          <input
                                            aria-invalid={false}
                                            autoComplete="off"
                                            className="Textinput-Control"
                                            disabled={true}
                                            max="2015-02-18"
                                            min="2015-02-15"
                                            name="datefield"
                                            onChange={[Function]}
                                            onKeyDown={[Function]}
                                            readOnly={true}
                                            type="date"
                                            value="2015-02-17"
                                          />
                                        </TextinputControl>
                                      </RenderOverride>
                                      <TextinputBox>
                                        <span
                                          className="Textinput-Box"
                                        />
                                      </TextinputBox>
                                    </span>
                                  </Textinput>
                                </WithControl(Textinput)>
                              </withAutoFocus(WithControl(Textinput))>
                            </Component>
                          </Component>
                        </Component>
                      </Component>
                    </Component>
                  </Component>
                </Component>
              </Component>
            </Component>
          </DebounceInput>
        </Component>
      </Component>
    </DatepickerPresenter>
  </Component>
</Component>
`;
